fixed z-index settings for dropdowns create btn and footer

--- a/styles/task.css
+++ b/styles/task.css
@@ -34,13 +34,13 @@ form {
   max-width: 440px;
 }
 
-label, .label {
+label,
+.label {
   margin-block-start: 1.5em;
   display: block;
 }
 
-.select-options {
-  list-style-type: none;
+.select-options-container {
   padding: 1em 0.5em 0.5em;
   margin: 0;
   margin-block-start: -1em;
@@ -48,6 +48,12 @@ label, .label {
   border-bottom-left-radius: 0.3em;
   border-bottom-right-radius: 0.3em;
   position: relative;
+}
+
+.select-options {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .select-options li {
@@ -72,7 +78,8 @@ label, .label {
   max-width: unset;
 }
 
-.select-input, .select-input * {
+.select-input,
+.select-input * {
   cursor: pointer;
 }
 
@@ -149,9 +156,9 @@ textarea {
 }
 
 .subtask {
- display: flex;
- align-items: center;
- padding: 0.5em;
+  display: flex;
+  align-items: center;
+  padding: 0.5em;
 }
 
 .subtask + .subtask {
@@ -188,14 +195,19 @@ li:not(.subtask-edit) .subtask-edit-icons {
   margin-inline-start: auto;
 }
 
-form .btn-create-task {
+form .btn-text-icon {
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 4px;
+  padding: 0.75em 1em;
+  font-size: var(--fs-normal);
+  width: 100%;
+}
+
+form .btn-create-task {
   margin-inline-start: auto;
   width: unset;
-  padding: 1em;
-  font-size: var(--fs-normal);
 }
 
 .create-btn-container {
@@ -203,6 +215,11 @@ form .btn-create-task {
   background-color: var(--subtle-bg-color);
   position: sticky;
   bottom: var(--footer-height);
+  z-index: 4;
+}
+
+#mobile-template {
+  z-index: 4;
 }
 
 footer {
